# Pipline

Krishna/medicine/projects/medicine/: .algokit.toml  README.md  pyproject.toml
Krishna/medicine/projects/medicine/.algokit/: .copier-answers.yml
Krishna/medicine/projects/medicine/back/: index.js  package-lock.json  package.json
Krishna/medicine/projects/medicine/back/config/: maps.js
Krishna/medicine/projects/medicine/back/controllers/: medicineController.js  userController.js
Krishna/medicine/projects/medicine/back/models/: medicineModel.js  userModel.js
Krishna/medicine/projects/medicine/back/routes/: medicineRoutes.js  userRoutes.js
Krishna/medicine/projects/medicine/back/utils/: generateQR.js  sendEmail.js
Krishna/medicine/projects/medicine/medicine/: about.html  borrower-signup.html  borrower.html  cart.html  chatbot.html  feedbackform.html  form.html  index.html  lender.html  login.html  registration-form.html
Krishna/medicine/projects/medicine/medicine/css/: style.css
Krishna/medicine/projects/medicine/medicine/images/: bg2.avif
Krishna/medicine/projects/medicine/smart_contracts/artifacts/lend_borrow/: MedicineLendingPlatform.approval.puya.map  MedicineLendingPlatform.approval.teal  medicine_lending_platform_client.py
Krishna/medicine/projects/medicine/smart_contracts/lend_borrow/: MedicineLendingPlatform.approval.puya.map  MedicineLendingPlatform.approval.teal  MedicineLendingPlatform.arc32.json  contract.py  deploy_config.py
